--- a/package.json
+++ b/package.json
@@ -71,16 +71,19 @@
     "dependencies": {
         "@stackoverflow/stacks": "^0.58.0",
         "@stackoverflow/stacks-icons": "^2.17.0",
+        "@types/katex": "^0.11.0",
         "@types/markdown-it": "10.0.2",
         "@types/prosemirror-commands": "^1.0.3",
         "@types/prosemirror-history": "^1.0.1",
         "@types/prosemirror-inputrules": "^1.0.3",
         "@types/prosemirror-keymap": "^1.0.3",
         "@types/prosemirror-markdown": "^1.5.0",
-        "@types/prosemirror-model": "^1.11.1",
+        "@types/prosemirror-model": "^1.11.2",
         "@types/prosemirror-schema-list": "^1.0.1",
+        "@types/prosemirror-schema-basic": "^1.0.2",
         "@types/prosemirror-state": "^1.2.5",
         "@types/prosemirror-view": "^1.17.0",
+        "katex": "^0.12.0",
         "markdown-it": "^10.0.0",
         "prosemirror-commands": "^1.1.4",
         "prosemirror-highlightjs": "^0.5.1",
